remove zoom, fix a select in dark mode

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -313,3 +313,8 @@ body {
     height: 100%;
     overflow: auto;
 }
+
+.minWith60 {
+    width: auto !important;
+    min-width: 60px !important;;
+}
